--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
             <input type="submit" value="send" />
         </form>
 
+        <div class="messages">
+            <!-- Messages end up here -->
+
+        </div>
+
         <script src="/js/jquery-3.1.1.min.js"></script>
         <script src="/js/socket.io-1.3.7.js"></script>
         <script src="/js/app.js"></script>
