--- a/public/index.html
+++ b/public/index.html
@@ -5,21 +5,12 @@
         <title>Socket.io Basics</title>
     </head>
     <body>
+        <h1>Join Chat</h1>
 
-        <form id="message-form">
-            <input type="text" name="message" placeholder="message here" />
-            <input type="submit" value="send" />
+        <form action="/chat.html">
+            <label for="">Display Name</label>
+            <input type="text" name="name" placeholder="ex. christianpena9" \>
+            <input type="submit" value="Join Chat" \>
         </form>
-
-        <div class="messages">
-            <!-- Messages end up here -->
-
-        </div>
-
-        <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/socket.io-1.3.7.js"></script>
-        <script src="/js/moment.js"></script>
-        <script src="/js/QueryParams.js"></script>
-        <script src="/js/app.js"></script>
     </body>
 </html>
