Add support for chat rooms

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,11 @@
 
         <form action="/chat.html">
             <label for="">Display Name</label>
-            <input type="text" name="name" placeholder="ex. christianpena9" \>
+            <input type="text" name="name" placeholder="ex. christianpena9" \><br>
+
+            <label for="">Room Name</label>
+            <input type="text" name="room" placeholder="ex. LOL Fans"><br>
+            
             <input type="submit" value="Join Chat" \>
         </form>
     </body>
