--- a/public/chat.html
+++ b/public/chat.html
@@ -8,6 +8,8 @@
 
         <a href="/index.html">Change Settings</a>
 
+        <h1 class="room-title"></h1>
+
         <form id="message-form">
             <input type="text" name="message" placeholder="message here" />
             <input type="submit" value="send" />
