--- a/public/chat.html
+++ b/public/chat.html
@@ -1,29 +1,33 @@
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Socket.io Basics</title>
-    </head>
-    <body>
 
-        <a href="/index.html">Change Settings</a>
+<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <title>Socket.io Basics</title>
+</head>
 
-        <h1 class="room-title"></h1>
+<body>
 
-        <form id="message-form">
-            <input type="text" name="message" placeholder="message here" />
-            <input type="submit" value="send" />
-        </form>
+    <a href="/index.html">Change Settings</a>
 
-        <div class="messages">
-            <!-- Messages end up here -->
+    <h1 class="room-title"></h1>
 
-        </div>
+    <form id="message-form">
+        <input type="text" name="message" placeholder="message here" />
+        <input type="submit" value="send" />
+    </form>
 
-        <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/socket.io-1.3.7.js"></script>
-        <script src="/js/moment.js"></script>
-        <script src="/js/QueryParams.js"></script>
-        <script src="/js/app.js"></script>
-    </body>
+    <div class="messages">
+        <!-- Messages end up here -->
+
+    </div>
+
+    <script src="/js/jquery-3.1.1.min.js"></script>
+    <script src="/js/socket.io-1.3.7.js"></script>
+    <script src="/js/moment.js"></script>
+    <script src="/js/QueryParams.js"></script>
+    <script src="/js/app.js"></script>
+</body>
+
 </html>
