--- a/public/chat.html
+++ b/public/chat.html
@@ -2,25 +2,40 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <meta charset="UTF-8">
     <title>Socket.io Basics</title>
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
 
-    <a href="/index.html">Change Settings</a>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 col-md-offset-3 well">
+                <a href="/index.html">Change Settings</a>
 
-    <h1 class="room-title"></h1>
+                <h1 class="room-title"><!--Room Name (use jQuery)--></h1>
 
-    <form id="message-form">
-        <input type="text" name="message" placeholder="message here" />
-        <input type="submit" value="send" />
-    </form>
+                <ul class="messages list-group">
+                    <!-- Messages end up here -->
+                </ul>
 
-    <div class="messages">
-        <!-- Messages end up here -->
-
+                <form id="message-form">
+                    <div class="form-group">
+                        <div class="input-group">
+                            <span class="input-group-addon">
+                                <i class="glyphicon glyphicon-comment"></i>
+                            </span>
+                            <input type="text" name="message" class="form-control" placeholder="message here" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Submit" class="btn btn-default btn-block" />
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
 
     <script src="/js/jquery-3.1.1.min.js"></script>
