--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 well">
                     <h1>Join Chat</h1>
-                    <form>
+                    <form action="/chat.html">
                         <div class="form-group">
                             <label for="">Display Name</label>
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <i class="glyphicon glyphicon-user"></i>
                                 </span>
-                                <input type="text" clas="name" class="form-control" id="" placeholder="ex. christianpena9" />
+                                <input type="text" name="name" class="form-control" placeholder="ex. christianpena9" />
                             </div>
                         </div>
 
@@ -32,14 +32,12 @@
                                 <span class="input-group-addon">
                                     <i class="glyphicon glyphicon-comment"></i>
                                 </span>
-                                <input type="text" name="room" class="form-control" id="" placeholder="ex. LOL Fans" />
+                                <input type="text" name="room" class="form-control" placeholder="ex. LOL Fans" />
                             </div>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Join Chat" class="btn btn-primary btn-block" \>
                         </div>
-
-                        <!--<button type="submit" class="btn btn-default">Submit</button>-->
                     </form>
                 </div>
             </div>
