--- a/public/chat.html
+++ b/public/chat.html
@@ -12,10 +12,10 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 well">
+            <div class="col-md-6 col-md-offset-3 well" style="margin-top:35px;">
                 <a href="/index.html">Change Settings</a>
 
-                <h1 class="room-title"><!--Room Name (use jQuery)--></h1>
+                <h1 class="room-title text-center"><!--Room Name (use jQuery)--></h1>
 
                 <ul class="messages list-group">
                     <!-- Messages end up here -->
